src/main/fabric8/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: ${project.fabric8.name}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: ${project.fabric8.name}
  type: ClusterIP
  sessionAffinity: None
