src/main/fabric8/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${project.fabric8.name}
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: ${project.fabric8.name}
